# arm

./: README.md  v2.frw  v2.frw.bak  ~$v2.fr~
CAD/BEARINGS/: 35x47x7.SLDPRT  35x55x10.SLDPRT  3x8x3.SLDPRT  3x8x4.SLDPRT  3x8x4_F.SLDPRT  5x16x5.SLDPRT  5x16x5_F.SLDPRT  8x22x7.SLDPRT  90x115x13.SLDPRT  90x120x22.SLDPRT
CAD/BELTS/: 2GT_L150_26T_60T_34OD.SLDPRT  2GT_L280_20T_40T_109OD.SLDPRT  2GT_L350_20T_100T_112OD.SLDPRT
CAD/ENCODERS/AMT102/: AMT_102_F.SLDPRT
CAD/ENCODERS/AS5048/: AS5048A.SLDPRT  MAGNET_5x3.SLDPRT  MAGNET_6x3.SLDPRT
CAD/PULLEYS/GT2/: GT2_16T_10W_B5.SLDPRT  GT2_20T_10W_B8.SLDPRT  GT2_30T_10W_B5.SLDPRT  GT2_30T_10W_B8.SLDPRT  GT2_40T_10W_B8.SLDPRT  GT2_60T_10W_B5.SLDPRT  GT2_60T_10W_B8.SLDPRT  GT_2_20T_ROLLER.SLDPRT
CAD/SCREWS/M2/: DIN912_M2x5.SLDPRT  DIN912_M2x8.SLDPRT  ISO4032_M2.SLDPRT
CAD/SCREWS/M3/: DIN84_M3x22.SLDPRT  DIN84_M3x8.SLDPRT  DIN912_M3x10.SLDPRT  DIN912_M3x12.SLDPRT  DIN912_M3x14.SLDPRT  DIN912_M3x16.SLDPRT  DIN912_M3x20.SLDPRT  DIN912_M3x22.SLDPRT  DIN912_M3x35.SLDPRT  DIN912_M3x50.SLDPRT  DIN912_M3x8.SLDPRT  ISO4032_M3.SLDPRT
CAD/SCREWS/M4/: DIN912_M4x30.SLDPRT
CAD/SCREWS/M5/: DIN912_M5x20.SLDPRT  DIN912_M5x30.SLDPRT  (+4 more)
CAD/SHAFT/: SHAFT_5mm_52.SLDPRT  SHAFT_8mm_100.SLDPRT  SHAFT_8mm_120.SLDPRT  SHAFT_8mm_80.SLDPRT
CAD/TEST_1/: TAP_1.SLDPRT  TAP_2.SLDPRT  TAP_2_2.SLDPRT  TAP_4.SLDPRT  TAP_ASSM_2_0.SLDASM  TB.SLDASM  TB_0_1.SLDPRT  TB_RIGHT.SLDPRT  TP_12.SLDPRT  TP_2.SLDPRT  TP_3.SLDPRT  TP_4_2.SLDPRT  TP_4_3.SLDPRT  TP_7.SLDPRT  TP_7_1.SLDPRT  TP_8.SLDPRT  TP_8_1.SLDPRT  TP_9.SLDPRT  TP_9_1.SLDPRT  T_ASSM_1.SLDASM
CODE/: 99-usb-serial.rules  notes.txt
CODE/pico_arm/: CMakeLists.txt  pico_arm.c
CODE/pico_arm/as5048a/: as5048a.c  as5048a.h
CODE/pico_arm/servo/: servo.c  servo.h  servo.pio
CODE/pico_arm/stepper/: stepper.c  stepper.h  stepper.pio
CODE/ros_arm/src/arm_driver/: CMakeLists.txt  package.xml
CODE/ros_arm/src/arm_driver/launch/: arm_driver.launch
CODE/ros_arm/src/arm_driver/src/: arm_driver.cpp  arm_driver.hpp
(+67 files in other folders)
